--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>selnuim detector</title>
 </head>
 <body>
 <script>
-    document.write(navigator.webdriver)
+    if (navigator.webdriver){
+        document.write("no scrape for u")
+    }
 </script>
 </body>
 </html>
